# game-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  build.sh  cmake_install.cmake  imgui.ini  main.cpp
.cache/clangd/index/: Application.cpp.5777BFDCA2D8DCE0.idx  Application.h.3761195097502F20.idx  Application.h.B17391970C9C5CB7.idx  Event.cpp.1BDD11AE9EAE4D4E.idx  Logger.cpp.4C25B780F553221F.idx  Logger.h.A2237A1D6AEAA903.idx  Logger.h.BB18AD1DCE879C39.idx  Renderer.cpp.7F2715B23C148489.idx  Renderer.h.5895A78951B54EAC.idx  Renderer.h.78D41808E41C746B.idx  Sandbox.cpp.7BA7834D8E4DB663.idx  Shader.cpp.46C61410E82F16B6.idx  Shader.h.666FEE9315B947A8.idx  Shader.h.6E1F434B85F03E71.idx  Types.h.43421C93A1AA4EBD.idx  Types.h.E94E9E2E49F4D399.idx  VertexContainer.cpp.F7CDC85B670EFC1F.idx  VertexContainer.h.3A2C590903FA9E84.idx  VertexContainer.h.9D7CB07BA094B688.idx  Wavefront.cpp.7053BF2DF1D1A068.idx  Wavefront.h.C84D58EF79C28E42.idx  Window.cpp.26B8669B3C0F0E9B.idx  Window.h.10BCB7E033AD721F.idx  Window.h.19C2AFA46E206097.idx  glew.h.B9A55FC50A15BCC6.idx  glfw3.h.01642FD1C2B0E5C0.idx  main.cpp.3789ED4B17570A80.idx
Sandbox/: Sandbox.cpp
Sandbox/models/: testscene.mtl  threecubes.mtl
editor/: CMakeLists.txt  Editor.cpp  Editor.h  cmake_install.cmake  importer.h  main.cpp
editor/Shaders/: fragment_shader.glsl  vertex_shader.glsl
editor/Shaders/grid/: grid_fragment_shader.glsl  grid_vertex_shader.glsl
editor/include/Core/: FileSystem.h  Node.h
editor/include/UI/: ApplicationState.h  LayoutContainer.h  UIBackend.h  UIElement.h  UIEngine.h  UIManager.h  UIPanel.h
editor/include/UI/ImGui/: ImGuiLayer.h  ImGuiLayoutContainer.h  ImGuiPanel.h
editor/include/UI/ImGui/Panels/: AssetLibraryPanel.h  ExamplePanel.h  FileBrowserPanel.h  FrameBufferPanel.h  LoadObjectPanel.h  NodePropsPanel.h  ScenePropsPanel.h
editor/include/UI/MacOS/: FileOpenDialog.mm
editor/src/Core/: FileSystem.cpp
editor/src/UI/: LayoutContainer.cpp  UIElement.cpp  UIEngine.cpp  UIManager.cpp
editor/src/UI/ImGui/: ImGuiLayer.cpp  ImGuiLayoutContainer.cpp  ImGuiPanel.cpp
editor/src/UI/ImGui/Panels/: AssetLibraryPanel.cpp  ExamplePanel.cpp  FileBrowserPanel.cpp  FrameBufferPanel.cpp  LoadObjectPanel.cpp  NodePropsPanel.cpp  ScenePropsPanel.cpp
include/: Event.h
include/Core/: Application.h  Camera.h  FrameBuffer.h  Light.h  Renderer.h  Shader.h  Texture.h  VertexContainer.h  Window.h
include/Events/: Event.h  KeyboardEvent.h
include/Loaders/: ObjLoader.h  Wavefront.h
include/Transformers/: Scale.h
lib/: CMakeLists.txt  cmake_install.cmake
lib/include/: Core.h
lib/include/Core/: Application.h  Buffer.h  Camera.h  Events.h  FrameBuffer.h  Light.h  Logger.h  Renderer.h  Shader.h  Texture.h  VertexContainer.h  Window.h
lib/include/Core/Platform/OpenGL/: OpenGLBuffer.h
lib/include/Loaders/: ObjLoader.h
lib/src/Core/: Application.cpp  Camera.cpp  FrameBuffer.cpp  Light.cpp  Logger.cpp  Shader.cpp  Texture.cpp  VertexContainer.cpp  Window.cpp
src/Core/: Application.cpp  Camera.cpp  FrameBuffer.cpp  Light.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexContainer.cpp  Window.cpp
src/Core/Loaders/: ObjLoader.cpp  Wavefront.cpp
src/Shaders/: fragment_shader.glsl  vertex_shader.glsl
src/Transformers/: Scale.cpp
